update tmux config

--- a/etc/tmux.conf
+++ b/etc/tmux.conf
@@ -1,33 +1,134 @@
-set -g default-terminal "screen-256color"
-
 set -g prefix C-a
-unbind C-b
-bind-key C-a send-prefix
+# Reload the file with Prefix r.
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-unbind %
-bind | split-window -h
-
-unbind '"'
-bind - split-window -v
-
-unbind r
-bind r source-file ~/.tmux.conf
-
+# pane resizing
 bind -r j resize-pane -D 5
 bind -r k resize-pane -U 5
 bind -r l resize-pane -R 5
 bind -r h resize-pane -L 5
 
-bind -r m resize-pane -Z
+# 复制模式中的键盘布局
+setw -g mode-keys vi
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+set -s set-clipboard on
+bind-key -T copy-mode-vi y send -X copy-selection-and-cancel
+#bind-key ] run-shell "~/.local/bin/oclip -o | tmux load-buffer -" \; paste-buffer ;
 
+# 支持鼠标
 set -g mouse on
 
-set-window-option -g mode-keys vi
+# zoom
+bind + resize-pane -Z
 
-bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with "v"
-bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
+# 256 color
+set -g default-terminal "tmux-256color"
+set-option -ga terminal-overrides ',tmux-256color:Tc'
+set-option -ga terminal-overrides ',tmux-256color:RGB'
 
-unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode after dragging with mouse
+# 新开窗口默认路径
+# this not support symbolic link
+#bind '"' splitw -v -c "#{pane_current_path}"
+#bind '%' splitw -h -c "#{pane_current_path}"
+#bind c neww -c "#{pane_current_path}"
+# this support symbolic link
+bind c run-shell 'tmux new-window "cd \"$(tmux show-environment $(echo "TMUXPWD_#D" | tr -d %) | sed -e "s/^.*=//")\"; exec $SHELL"'
+bind '"' run-shell 'tmux split-window -v "cd \"$(tmux show-environment $(echo "TMUXPWD_#D" | tr -d %) | sed -e "s/^.*=//")\"; exec $SHELL"'
+bind '%' run-shell 'tmux split-window -h "cd \"$(tmux show-environment $(echo "TMUXPWD_#D" | tr -d %) | sed -e "s/^.*=//")\"; exec $SHELL"'
+
+# pane number display
+set -g display-panes-active-colour blue
+set -g display-panes-colour black
+set -g display-panes-time 500
+
+# pane border
+set -g pane-border-style "fg=black"
+set -g pane-active-border-style "fg=blue"
+
+# 状态栏刷新间隔
+set -g status-interval 2
+# esc 时间
+set -g escape-time 10
+
+# 窗口名为 cmd 名
+setw -g allow-rename off
+setw -g automatic-rename on
+setw -g automatic-rename-format "#{pane_current_command}"
+
+# 缓冲区大小
+set -g history-limit 5000
+
+set-option -g focus-events on
+
+############ 颜色 ###############
+
+# --> Catppuccin (Latte)
+thm_bg="#dce0e8"
+thm_fg="#4c4f69"
+thm_cyan="#179299"
+thm_black="#e6e9ef"
+thm_gray="#bcc0cc"
+thm_magenta="#ea76cb"
+thm_pink="#8839ef"
+thm_red="#d20f39"
+thm_green="#40a02b"
+thm_yellow="#df8e1d"
+thm_blue="#1e66f5"
+thm_orange="#fe640b"
+thm_black4="#acb0be"
+
+
+# --> Catppuccin (Frappe)
+thm_bg="#303446"
+thm_fg="#c6d0f5"
+thm_cyan="#99d1db"
+thm_black="#292c3c"
+thm_gray="#414559"
+thm_magenta="#ca9ee6"
+thm_pink="#f4b8e4"
+thm_red="#e78284"
+thm_green="#a6d189"
+thm_yellow="#e5c890"
+thm_blue="#8caaee"
+thm_orange="#ef9f76"
+thm_black4="#626880"
+
+
+# ----------------------------=== Theme ===--------------------------
+
+# status
+set -g status "on"
+set -g status-bg "${thm_bg}"
+set -g status-justify "left"
+set -g status-left-length "100"
+set -g status-right-length "100"
+
+# messages
+set -g message-style "fg=${thm_cyan},bg=${thm_gray},align=centre"
+set -g message-command-style "fg=${thm_cyan},bg=${thm_gray},align=centre"
+
+# panes
+set -g pane-border-style "fg=${thm_gray}"
+set -g pane-active-border-style "fg=${thm_blue}"
+
+# windows
+setw -g window-status-activity-style "fg=${thm_fg},bg=${thm_bg},none"
+setw -g window-status-separator ""
+setw -g window-status-style "fg=${thm_fg},bg=${thm_bg},none"
+
+# --------=== Statusline
+
+set -g status-left "#{?client_prefix,#[fg=$thm_red],#[fg=$thm_green]}#[bg=$thm_gray]#{?client_prefix,#[bg=$thm_red],#[bg=$thm_green]}#[fg=$thm_bg]  #S "
+set -g status-right "#[fg=$thm_pink,bg=$thm_bg,nobold,nounderscore,noitalics]#[fg=$thm_bg,bg=$thm_pink,nobold,nounderscore,noitalics]ﮮ %H:%M:%S #[fg=$thm_fg,bg=$thm_gray] #W "
+
+# parent_dir/current_dir
+setw -g window-status-format "#[fg=$thm_fg,bg=$thm_gray] #I: #(echo '#{pane_current_path}' | rev | cut -d'/' -f-2 | rev) "
+setw -g window-status-current-format "#[fg=$thm_bg,bg=$thm_blue] #I: #(echo '#{pane_current_path}' | rev | cut -d'/' -f-2 | rev) "
+
+# --------=== Modes
+setw -g clock-mode-colour "${thm_blue}"
+setw -g mode-style "fg=${thm_pink} bg=${thm_black4} bold"
+
 
 # tpm plugin
 set -g @plugin 'tmux-plugins/tpm'
@@ -41,6 +142,7 @@ set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for 
 set -g @plugin "janoamaral/tokyo-night-tmux"
 
 set -g @continuum-save-interval '15'
+set -g @continuum-boot 'on' # enable tmux-continuum on boot
 set -g @resurrect-capture-pane-contents 'on' # allow tmux-ressurect to capture pane contents
 set -g @continuum-restore 'on' # enable tmux-continuum functionality
 
