--- a/etc/tmux.conf
+++ b/etc/tmux.conf
@@ -120,6 +120,9 @@ setw -g window-status-style "fg=${thm_fg},bg=${thm_bg},none"
 
 set -g status-left "#{?client_prefix,#[fg=$thm_red],#[fg=$thm_green]}#[bg=$thm_gray]#{?client_prefix,#[bg=$thm_red],#[bg=$thm_green]}#[fg=$thm_bg]  #S "
 set -g status-right "#[fg=$thm_pink,bg=$thm_bg,nobold,nounderscore,noitalics]#[fg=$thm_bg,bg=$thm_pink,nobold,nounderscore,noitalics]ﮮ %H:%M:%S #[fg=$thm_fg,bg=$thm_gray] #W "
+continuum_auto_save='#(~/.tmux/plugins/tmux-continuum/scripts/continuum_save.sh)'
+status_right="$status_right$continuum_auto_save"
+set -g status-right "$status_right" 
 
 # parent_dir/current_dir
 setw -g window-status-format "#[fg=$thm_fg,bg=$thm_gray] #I: #(echo '#{pane_current_path}' | rev | cut -d'/' -f-2 | rev) "
@@ -138,7 +141,7 @@ set -g @plugin 'christoomey/vim-tmux-navigator' # for navigating panes and vim/n
 set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
 set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
 
-set -g @continuum-save-interval '15'
+set -g @continuum-save-interval '1'
 set -g @continuum-boot 'on' # enable tmux-continuum on boot
 set -g @resurrect-capture-pane-contents 'on' # allow tmux-ressurect to capture pane contents
 set -g @continuum-restore 'on' # enable tmux-continuum functionality
