--- a/etc/tmux.conf
+++ b/etc/tmux.conf
@@ -50,88 +50,37 @@ set -g status-interval 2
 # esc 时间
 set -g escape-time 10
 
-# 窗口名为 cmd 名
-setw -g allow-rename off
-setw -g automatic-rename on
-setw -g automatic-rename-format "#{pane_current_command}"
 
 # 缓冲区大小
 set -g history-limit 5000
 
 set-option -g focus-events on
 
-############ 颜色 ###############
-
-# --> Catppuccin (Latte)
-thm_bg="#dce0e8"
-thm_fg="#4c4f69"
-thm_cyan="#179299"
-thm_black="#e6e9ef"
-thm_gray="#bcc0cc"
-thm_magenta="#ea76cb"
-thm_pink="#8839ef"
-thm_red="#d20f39"
-thm_green="#40a02b"
-thm_yellow="#df8e1d"
-thm_blue="#1e66f5"
-thm_orange="#fe640b"
-thm_black4="#acb0be"
-
-
-# --> Catppuccin (Frappe)
-thm_bg="#303446"
-thm_fg="#c6d0f5"
-thm_cyan="#99d1db"
-thm_black="#292c3c"
-thm_gray="#414559"
-thm_magenta="#ca9ee6"
-thm_pink="#f4b8e4"
-thm_red="#e78284"
-thm_green="#a6d189"
-thm_yellow="#e5c890"
-thm_blue="#8caaee"
-thm_orange="#ef9f76"
-thm_black4="#626880"
-
-
-# ----------------------------=== Theme ===--------------------------
-
-# status
-set -g status "on"
-set -g status-bg "${thm_bg}"
-set -g status-justify "left"
-set -g status-left-length "100"
-set -g status-right-length "100"
-
-# messages
-set -g message-style "fg=${thm_cyan},bg=${thm_gray},align=centre"
-set -g message-command-style "fg=${thm_cyan},bg=${thm_gray},align=centre"
-
-# panes
-set -g pane-border-style "fg=${thm_gray}"
-set -g pane-active-border-style "fg=${thm_blue}"
-
-# windows
-setw -g window-status-activity-style "fg=${thm_fg},bg=${thm_bg},none"
-setw -g window-status-separator ""
-setw -g window-status-style "fg=${thm_fg},bg=${thm_bg},none"
-
-# --------=== Statusline
-
-set -g status-left "#{?client_prefix,#[fg=$thm_red],#[fg=$thm_green]}#[bg=$thm_gray]#{?client_prefix,#[bg=$thm_red],#[bg=$thm_green]}#[fg=$thm_bg]  #S "
-set -g status-right "#[fg=$thm_pink,bg=$thm_bg,nobold,nounderscore,noitalics]#[fg=$thm_bg,bg=$thm_pink,nobold,nounderscore,noitalics]ﮮ %H:%M:%S #[fg=$thm_fg,bg=$thm_gray] #W "
-
-# parent_dir/current_dir
-setw -g window-status-format "#[fg=$thm_fg,bg=$thm_gray] #I: #(echo '#{pane_current_path}' | rev | cut -d'/' -f-2 | rev) "
-setw -g window-status-current-format "#[fg=$thm_bg,bg=$thm_blue] #I: #(echo '#{pane_current_path}' | rev | cut -d'/' -f-2 | rev) "
-
-# --------=== Modes
-setw -g clock-mode-colour "${thm_blue}"
-setw -g mode-style "fg=${thm_pink} bg=${thm_black4} bold"
-
 
 # tpm plugin
 set -g @plugin 'tmux-plugins/tpm'
+
+############ theme ###############
+set -g @plugin 'catppuccin/tmux'
+set -g @catppuccin_flavour 'mocha' #  latte, frappe, macchiato, mocha
+
+set -g @catppuccin_window_left_separator "█"
+set -g @catppuccin_window_right_separator "█ "
+set -g @catppuccin_window_number_position "right"
+set -g @catppuccin_window_middle_separator "  █"
+
+set -g @catppuccin_window_default_fill "number"
+
+set -g @catppuccin_window_current_fill "number"
+set -g @catppuccin_window_current_text "#{pane_current_path}"
+
+set -g @catppuccin_status_modules_right "application session date_time"
+set -g @catppuccin_status_left_separator  ""
+set -g @catppuccin_status_right_separator " "
+set -g @catppuccin_status_right_separator_inverse "yes"
+set -g @catppuccin_status_fill "all"
+set -g @catppuccin_status_connect_separator "no"
+###########
 
 
 # list of tmux plugins
