--- a/etc/tmux.conf
+++ b/etc/tmux.conf
@@ -33,17 +33,9 @@ set-option -ga terminal-overrides ',tmux-256color:RGB'
 #bind c neww -c "#{pane_current_path}"
 # this support symbolic link
 bind c run-shell 'tmux new-window "cd \"$(tmux show-environment $(echo "TMUXPWD_#D" | tr -d %) | sed -e "s/^.*=//")\"; exec $SHELL"'
-bind '"' run-shell 'tmux split-window -v "cd \"$(tmux show-environment $(echo "TMUXPWD_#D" | tr -d %) | sed -e "s/^.*=//")\"; exec $SHELL"'
-bind '%' run-shell 'tmux split-window -h "cd \"$(tmux show-environment $(echo "TMUXPWD_#D" | tr -d %) | sed -e "s/^.*=//")\"; exec $SHELL"'
+bind '-' run-shell 'tmux split-window -v "cd \"$(tmux show-environment $(echo "TMUXPWD_#D" | tr -d %) | sed -e "s/^.*=//")\"; exec $SHELL"'
+bind '\' run-shell 'tmux split-window -h "cd \"$(tmux show-environment $(echo "TMUXPWD_#D" | tr -d %) | sed -e "s/^.*=//")\"; exec $SHELL"'
 
-# pane number display
-set -g display-panes-active-colour blue
-set -g display-panes-colour black
-set -g display-panes-time 500
-
-# pane border
-set -g pane-border-style "fg=black"
-set -g pane-active-border-style "fg=blue"
 
 # 状态栏刷新间隔
 set -g status-interval 2
@@ -63,24 +55,25 @@ set -g @plugin 'tmux-plugins/tpm'
 ############ theme ###############
 set -g @plugin 'catppuccin/tmux'
 set -g @catppuccin_flavour 'mocha' #  latte, frappe, macchiato, mocha
+set -g @plugin 'jamesoff/tmux-loadavg'
+set -g @catppuccin_load_icon ""
+set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @catppuccin_date_time_icon ""
+set -g @catppuccin_status_modules_right "cpu load date_time"
 
-set -g @catppuccin_window_left_separator "█"
-set -g @catppuccin_window_right_separator "█ "
+set -g @catppuccin_window_right_separator "█ "
 set -g @catppuccin_window_number_position "right"
-set -g @catppuccin_window_middle_separator "  █"
+set -g @catppuccin_window_middle_separator " | "
 
-set -g @catppuccin_window_default_fill "number"
+set -g @catppuccin_window_default_fill "none"
+set -g @catppuccin_window_current_fill "all"
 
-set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#{pane_current_path}"
-
-set -g @catppuccin_status_modules_right "application session date_time"
 set -g @catppuccin_status_left_separator  ""
 set -g @catppuccin_status_right_separator " "
-set -g @catppuccin_status_right_separator_inverse "yes"
-set -g @catppuccin_status_fill "all"
-set -g @catppuccin_status_connect_separator "no"
-###########
+set -g @catppuccin_status_fill "icon"
+set -g @catppuccin_status_connect_separator "yes"
+set -g @catppuccin_date_time_text "%Y-%m-%d %H:%M"
+##########
 
 
 # list of tmux plugins
@@ -88,7 +81,7 @@ set -g @plugin 'christoomey/vim-tmux-navigator' # for navigating panes and vim/n
 set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
 set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
 
-set -g @continuum-save-interval '15'
+set -g @continuum-save-interval '1'
 set -g @resurrect-capture-pane-contents 'on' # allow tmux-ressurect to capture pane contents
 set -g @continuum-restore 'on' # enable tmux-continuum functionality
 
