--- a/etc/tmux.conf
+++ b/etc/tmux.conf
@@ -68,10 +68,8 @@ set -g @catppuccin_window_middle_separator " | "
 set -g @catppuccin_window_default_fill "none"
 set -g @catppuccin_window_current_fill "all"
 
-set -g @catppuccin_status_left_separator  ""
-set -g @catppuccin_status_right_separator " "
-set -g @catppuccin_status_fill "icon"
-set -g @catppuccin_status_connect_separator "yes"
+set -g @catppuccin_status_left_separator "█"
+set -g @catppuccin_status_right_separator "█"j
 set -g @catppuccin_date_time_text "%Y-%m-%d %H:%M"
 ##########
 
