update tmux conf

--- a/etc/tmux.conf
+++ b/etc/tmux.conf
@@ -1,4 +1,6 @@
 set -g prefix C-a
+# double press C-a to send-prefix to remote termial
+bind C-a send-prefix
 # Reload the file with Prefix r.
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
