--- a/config/versions.conf
+++ b/config/versions.conf
@@ -32,10 +32,13 @@ NVIM_CONFIG_REPO="https://github.com/edenz223/neovimConfig"
 # Oh-my-zsh
 OHMYZSH_INSTALL_URL="https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh"
 
-# Zsh plugins
+# Zsh plugins and tools
+FZF_REPO="https://github.com/junegunn/fzf.git"
 ZSH_AUTOSUGGESTIONS_REPO="https://github.com/zsh-users/zsh-autosuggestions"
 ZSH_SYNTAX_HIGHLIGHTING_REPO="https://github.com/zsh-users/zsh-syntax-highlighting.git"
 ZSH_COMPLETIONS_REPO="https://github.com/zsh-users/zsh-completions"
+ZSH_Z_REPO="https://github.com/agkozak/zsh-z"
+FZF_TAB_REPO="https://github.com/Aloxaf/fzf-tab"
 
 # TPM (Tmux Plugin Manager)
 TPM_REPO="https://github.com/tmux-plugins/tpm"
